[package]
name = "mdbook-codename"
version = "0.0.1"
edition = "2021"
authors = ["smallkirby"]
license = "MIT"
description = "mdbook-codename is a preprocessor for mdBook that displays the filename of your codeblocks."
repository = "https://github.com/smallkirby/mdbook-codename"
readme = "README.md"
keywords = ["mdbook", "markdown", "preprocessor", "codeblock", "filename"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
mdbook = "0.4.40"
once_cell = "1.20.2"
rust-embed = "8.5.0"
semver = "1.0.23"
serde = { version = "1.0.213", features = ["serde_derive"] }
serde_json = "1.0.132"
